--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
+__pycache__
+.vscode
+build
+expected
+out
 *.o
 *.s
 *.dol
 *.elf
+*.MAP
 *.exe
 *.dll
-*.MAP
-*.ninja
-/__pycache__/
+build.ninja
 .ninja_log
-/deps/
