--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -2,6 +2,6 @@ kartLocale.cpp:
     .text: [0x800056c0, 0x800057b4]
     .rodata: [0x80360900, 0x80360910]
     .data: [0x803879c0, 0x803879f8]
-    .sdata: [0x80413f80, 0x80413f8c]
+    .sdata: [0x80413f80, 0x80413f90]
     .sbss: [0x804156e0, 0x804156f0]
     .sdata2: [0x804171c0, 0x804171e8]
