--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -7,7 +7,7 @@ kartLocale.cpp:
     .sdata2: [0x804171c0, 0x804171e8]
 
 Kaneshige/KartInfo.cpp:
-    .text: [0x801a8844, 0x801a8c40]
+    .text: [0x801a8844, 0x801a8f54]
     .rodata: [0x803770f8, 0x80377378]    
     .data: [0x80395bf0, 0x80395c98]
     .sdata2: [0x80419dc8, 0x80419dd0]
