--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -6,16 +6,25 @@ kartLocale.cpp:
     .sbss: [0x804156e0, 0x804156f0]
     .sdata2: [0x804171c0, 0x804171e8]
 
+#JSystem/JMath/JMATrigonometric.cpp:
+    #.text: [0x800693d0, 0x800697f8]
+    #.bss: [0x803f2540, 0x803fa5c0]
+    #.sdata2: [0x80417798, 0x804177e0]
+
 Kaneshige/KartInfo.cpp:
     .text: [0x801a8844, 0x801a8f54]
     .rodata: [0x803770f8, 0x80377378]    
     .data: [0x80395bf0, 0x80395c98]
     .sdata2: [0x80419dc8, 0x80419dd0]
 
-#Kaneshige/RaceInfo.cpp:
-    #.text: [0x801b5098, 0x801b530c]
-    #.rodata: [0x80378510, 0x80378540]
-    #.sdata2: [0x8041a028, 0x8041a030]
+Kaneshige/RaceInfo.cpp:
+    .text: [0x801b5098, 0x801b5e14] # excludes __sinit_RaceInfo_cpp and __dt__8RaceInfoFv
+    .rodata: [0x80378510, 0x80378698]    
+    .data: [0x80395e08, 0x80395e30]
+    #.bss: [0x803ca8e8, 0x803ca928]
+    .sdata: [0x80414630, 0x80414640]
+    .sbss: [0x804163d0, 0x804163d8]
+    .sdata2: [0x8041a028, 0x8041a030]
 
 #Sato/stMath.cpp: # can't be compiled currently
     #.text: [0x8021f5fc, 0x8021f6e0] 
