--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -26,6 +26,9 @@ Kaneshige/RaceInfo.cpp:
     .sbss: [0x804163d0, 0x804163d8]
     .sdata2: [0x8041a028, 0x8041a030]
 
+Kaneshige/RaceTime.cpp:
+    .text: [0x801d9e4c, 0x801d9ea0]
+
 #Sato/stMath.cpp: # can't be compiled currently
     #.text: [0x8021f5fc, 0x8021f6e0] 
     #.rodata: [0x8037eec8, 0x8037eef0]
