--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -10,7 +10,7 @@ JSystem/JMath/random.cpp:
     .text: [0x800693c8, 0x800693d0]
 
 JSystem/JSupport/JSUList.cpp:
-    .text: [0x80078b2c, 0x80079048]
+    .text: [0x80078b2c, 0x800790d0]
 
 #JSystem/JMath/JMATrigonometric.cpp:
     #.text: [0x800693d0, 0x800697f8]
