--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -43,8 +43,8 @@ Kaneshige/RaceInfo.cpp:
 Kaneshige/RaceTime.cpp:
     .text: [0x801d9e4c, 0x801d9ea0]
 
-Osako/main.cpp:
-    .text: [0x801f75f4, 0x801f7618]
+#Osako/main.cpp:
+    #.text: [0x801f75f4, 0x801f7618]
 
 Osako/systemData.cpp:
     .text: [0x80205c2c, 0x80205db4]
