decompile KartChecker::reset()

--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -31,7 +31,7 @@ Kaneshige/KartInfo.cpp:
     .sdata2: [0x80419dc8, 0x80419dd0]
 
 Kaneshige/KartChecker.cpp:
-    .text: [0x801a9604, 0x801a9868]    
+    .text: [0x801a9604, 0x801a99f8]    
 
 Kaneshige/RaceInfo.cpp:
     .text: [0x801b5098, 0x801b5e14] # excludes __sinit_RaceInfo_cpp and __dt__8RaceInfoFv
