--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -31,7 +31,10 @@ Kaneshige/KartInfo.cpp:
     .sdata2: [0x80419dc8, 0x80419dd0]
 
 Kaneshige/KartChecker.cpp:
-    .text: [0x801a9604, 0x801a99f8]    
+    .text: [0x801a9084, 0x801a99f8]   
+    .rodata: [0x80377378, 0x80377494] 
+    #.data: [0x80395cc4, 0x80395cd8]
+    .sdata2: [0x80419dd0, 0x80419de8]
 
 Kaneshige/RaceInfo.cpp:
     .text: [0x801b5098, 0x801b5e14] # excludes __sinit_RaceInfo_cpp and __dt__8RaceInfoFv
