--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -30,11 +30,11 @@ Kaneshige/KartInfo.cpp:
     .data: [0x80395bf0, 0x80395c98]
     .sdata2: [0x80419dc8, 0x80419dd0]
 
-Kaneshige/KartChecker.cpp:
-    .text: [0x801a9040, 0x801ab128]   
-    .rodata: [0x80377378, 0x80377494] 
-    .data: [0x80395c98, 0x80395cd8]
-    .sdata2: [0x80419dd0, 0x80419e04]
+#Kaneshige/KartChecker.cpp:
+    #.text: [0x801a9040, 0x801ac5a0]   
+    #.rodata: [0x80377378, 0x80377494] 
+    #.data: [0x80395c98, 0x80395cd8]
+    #.sdata2: [0x80419dd0, 0x80419e04]
 
 Kaneshige/RaceInfo.cpp:
     .text: [0x801b5098, 0x801b5e14] # excludes __sinit_RaceInfo_cpp and __dt__8RaceInfoFv
